--- a/Hawk/App.config
+++ b/Hawk/App.config
@@ -2,21 +2,16 @@
 <configuration>
 
   <appSettings>
-    <add key="XFrmWork.Title" value="SamsungTTS"/>
-    <add key="XFrmWork.Splash" value="ProgramInfos\splash.jpg"/>
-    <add key="XFrmWork.Icon" value="ProgramInfos\icon.png"/>
-    <add key="XFrmWork.MainPluginLocation" value="\"/>
-    <add key="XFrmWork.PluginLocationRelative" value="true"/>
+    <add key="Title" value="Hawk-数据抓取工具"/>
+    <add key="Splash" value=""/>
+    <add key="Icon" value="icon.png"/>
+    <add key="MainPluginLocation" value="\"/>
+    <add key="PluginLocationRelative" value="true"/>
     <add key="ClientSettingsProvider.ServiceUri" value=""/>
   </appSettings>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     <requiredRuntime version="v4.0.20506"/>
   </startup>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <publisherPolicy apply="yes"/>
-      <probing privatePath="XDataMiningPlugin"/>
-    </assemblyBinding>
-  </runtime>
+ 
 </configuration>
