--- a/Hawk/Hawk.csproj
+++ b/Hawk/Hawk.csproj
@@ -119,6 +119,11 @@
       <Name>Hawk.ETL.Controls</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="PluginLogicLog.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
