--- a/Hawk.ETL/Hawk.ETL.csproj
+++ b/Hawk.ETL/Hawk.ETL.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Plugins\Transformers\CollumTransformer.cs" />
     <Compile Include="Plugins\Transformers\CrawlerTF.cs" />
     <Compile Include="Plugins\Transformers\JoinDBTF.cs" />
+    <Compile Include="Plugins\Transformers\RepeatTF.cs" />
     <Compile Include="Plugins\Transformers\Time2StrTF.cs" />
     <Compile Include="Plugins\Generators\EtlGE.cs" />
     <Compile Include="Plugins\Transformers\HtmlTF.cs" />
