增强与etlpy的兼容性

--- a/Hawk/App.config
+++ b/Hawk/App.config
@@ -1,17 +1,16 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-
   <appSettings>
-    <add key="Title" value="Hawk-数据抓取工具"/>
-    <add key="Splash" value=""/>
-    <add key="Icon" value="icon.png"/>
-    <add key="MainPluginLocation" value="\"/>
-    <add key="PluginLocationRelative" value="true"/>
-    <add key="ClientSettingsProvider.ServiceUri" value=""/>
+    <add key="Title" value="Hawk-数据抓取工具" />
+    <add key="Splash" value="splash.jpg" />
+    <add key="Icon" value="icon.png" />
+    <add key="MainPluginLocation" value="\" />
+    <add key="PluginLocationRelative" value="true" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
-    <requiredRuntime version="v4.0.20506"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+
   </startup>
- 
+  
 </configuration>
