--- a/Hawk.ETL/Hawk.ETL.csproj
+++ b/Hawk.ETL/Hawk.ETL.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Compile Include="Crawlers\BuffHelper.cs" />
     <Compile Include="Crawlers\CrawlItem.cs" />
+    <Compile Include="Crawlers\NetworkManager.cs" />
     <Compile Include="Crawlers\ProxyProvider.cs" />
     <Compile Include="Crawlers\XPath.cs" />
     <Compile Include="Crawlers\XPathAnalyzer.cs" />
