--- a/Hawk/App.config
+++ b/Hawk/App.config
@@ -12,5 +12,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
 
   </startup>
-  
+  <runtime>
+    <loadFromRemoteSources enabled="true"/>
+  </runtime>
 </configuration>
