--- a/Hawk/Hawk.csproj
+++ b/Hawk/Hawk.csproj
@@ -59,6 +59,10 @@
     <Reference Include="AvalonDock.Themes.Expression">
       <HintPath>..\Includes\AvalonDock.Themes.Expression.dll</HintPath>
     </Reference>
+    <Reference Include="Jint, Version=2.9.0.0, Culture=neutral, PublicKeyToken=2e92ba9c8d81157f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Hawk\Includes\Jint.dll</HintPath>
+    </Reference>
     <Reference Include="log4net">
       <HintPath>..\Includes\log4net.dll</HintPath>
     </Reference>
