--- a/Hawk/App.config
+++ b/Hawk/App.config
@@ -3,7 +3,7 @@
   <appSettings>
     <add key="Title" value="Hawk-数据抓取工具" />
     <add key="Splash" value="splash.jpg" />
-    <add key="Icon" value="icon.png" />
+    <add key="Icon" value="Hawk.ico" />
     <add key="MainPluginLocation" value="\" />
     <add key="PluginLocationRelative" value="true" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
