--- a/Hawk/Hawk.csproj
+++ b/Hawk/Hawk.csproj
@@ -58,6 +58,10 @@
     <Reference Include="AvalonDock.Themes.Expression">
       <HintPath>..\Includes\AvalonDock.Themes.Expression.dll</HintPath>
     </Reference>
+    <Reference Include="HtmlAgilityPack, Version=1.6.7.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\Hawk.Core\packages\HtmlAgilityPack.1.6.7\lib\Net45\HtmlAgilityPack.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Jint, Version=2.9.0.0, Culture=neutral, PublicKeyToken=2e92ba9c8d81157f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Hawk\Includes\Jint.dll</HintPath>
