--- a/Hawk.ETL/packages.config
+++ b/Hawk.ETL/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="HtmlAgilityPack" version="1.6.7" targetFramework="net45" />
+  <package id="NPOI" version="2.3.0" targetFramework="net45" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
 </packages>
