1. 增加sqlite,mysql的数据库连接支持，不一定非要使用文件了（测试不完全） 2. 增加网页采集器源代码的拷贝复制，提升了性能 3. 重要更新：当数据清洗发现有模块出问题无法返回数据时，提醒用户进入调试模式，弹窗可直接修改错误的参数 4. 修复数据清洗不显示最左边模块的问题（对应文档问题3） 5. 修复子流转换无法拖入的问题 6. 增加时间区间生成 7. 2,5,8,10 因为考虑到一些原因没有修复，也未增加多个关键字的xpath搜索，原因可以电话沟通

--- a/Hawk.Core/Hawk.Core.csproj
+++ b/Hawk.Core/Hawk.Core.csproj
@@ -61,6 +61,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Includes\MongoDB.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data">
+      <HintPath>..\Includes\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\Includes\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -84,6 +87,9 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SQLite">
+      <HintPath>..\Includes\System.Data.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Controls.WpfPropertyGrid, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -131,6 +137,8 @@
     <Compile Include="Connectors\IFileConnector.cs" />
     <Compile Include="Connectors\IFreeDocument.cs" />
     <Compile Include="Connectors\MongoDBConnector.cs" />
+    <Compile Include="Connectors\MySQLConnector.cs" />
+    <Compile Include="Connectors\SQLiteConnector.cs" />
     <Compile Include="Properties\Resources.en.Designer.cs">
       <DependentUpon>Resources.en.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -224,6 +232,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
