1. 【数据清洗】输入列支持下拉选择 2. 修改【下载文件】判断文件路径的bug 3. 【数据清洗】增加【已加载列表】，可拖拽和删除，大大提升可用性

--- a/Hawk.Core/Hawk.Core.csproj
+++ b/Hawk.Core/Hawk.Core.csproj
@@ -150,11 +150,15 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Themes\MetroConverter.cs" />
+    <Compile Include="Utils\Converters.cs" />
     <Compile Include="Utils\CookieAwareWebClient.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Utils\CustomSerializer.cs" />
+    <Compile Include="Utils\DragAdorner.cs" />
     <Compile Include="Utils\ForceLazy.cs" />
+    <Compile Include="Utils\ListViewDragDropManager.cs" />
+    <Compile Include="Utils\MouseUtilities.cs" />
     <Compile Include="Utils\MVVM\BindingEvaluator.cs" />
     <Compile Include="Utils\MVVM\BindingProxy.cs" />
     <Compile Include="Utils\MVVM\DropHelper.cs" />
